# metaQC

./: .gitignore  README.md  pyproject.toml  requirements.txt
metaqc/: cli.py  enrich.py  io.py  merger.py  normalizer.py  parser.py  report.py  scaffold.py  validator.py
schemas/: rnaseq.yaml
